--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
       <h3>Laurence Suhner</h3>
     </div>
 
-    <div>
-      <img src="img/Bouton/v button.png" alt="">
+    <div class="boutons">
+      <button class="ad" type="button"><img src="img/Bouton/add.png" alt=""></button>
+      <button class="delete" type="button"><img src="img/Bouton/trash.png" alt=""></button>
+      <button class="like" type="button"><img src="img/Bouton/like.png" alt=""></button>
+      <button class="dislike" type="button"><img src="img/Bouton/dislike.png" alt=""></button>
+      <button class="share" type="button"><img src="img/Bouton/" alt=""></button>
+      <button class="notification" type="button"><img src="img/Bouton/notification.png" alt=""></button>
     </div>
 
     <div class="infos">
-      <div>science fiction</div>
+      <div>S.F.</div>
       <div>2015</div>
       <div>576 pages</div>
       <div>8+</div>
