--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </header>
 
   <main>
-    <img src="img/couvertures/origines_couverture.jpg" alt="image du livre Origines de Laurence suhner">
+    <img class="photomain" src="img/couvertures/origines_couverture.jpg"
+      alt="image du livre Origines de Laurence suhner">
     <div class="titrartiste">
       <h1>Origines</h1>
       <h3>Laurence Suhner</h3>
@@ -64,16 +65,33 @@
 
     <h4>Note</h4>
 
+    <select class="star-rating" aria-label="Note utilisateur">
+      <option value="">Select a rating</option>
+      <option value="5">Excellent</option>
+      <option value="4">Very Good</option>
+      <option value="3">Average</option>
+      <option value="2">Poor</option>
+      <option value="1">Terrible</option>
+    </select>
+
     <h2>Avis</h2>
 
     <img src="img/Profils/simp1.png" alt="photo de profil autre utilisateur">
     <h5>@LJBentley</h5>
     <p>
       Excellent roman de SF; halletant et original ! à recommander; offrir, ... enfin de la SF écrit avec un regard
-      féminin.
+      féminin!
     </p>
     <h4>Note</h4>
-    <div class="notescommunaute"></div>
+    <div class="note1">
+      <svg xmlns="http://www.w3.org/2000/svg" width="174" height="30" viewBox="0 0 174 30" fill="none">
+        <ellipse cx="159" cy="14.5" rx="15" ry="14.5" fill="#FFFC00" />
+        <ellipse cx="123" cy="14.5" rx="15" ry="14.5" fill="#FFFC00" />
+        <ellipse cx="87" cy="15.5" rx="15" ry="14.5" fill="#FFFC00" />
+        <ellipse cx="51" cy="15.5" rx="15" ry="14.5" fill="#FFFC00" />
+        <ellipse cx="15" cy="15.5" rx="15" ry="14.5" fill="#FFFC00" />
+      </svg>
+    </div>
 
     <img src="img/Profils/simp2.png" alt="photo de profil autre utilisateur">
     <h5>@Amycolory</h5>
