photo de profil, survol de bouton, marges

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
 
   <header>
-    <div class="contourpp">
-      <img src="img/Profils/frintdevmax.png" alt="photo de profil utilisateur" class="pp">
-    </div>
+    <img src="img/Profils/frintdevmax.png" alt="photo de profil utilisateur" class="pp">
     <button class="retour" type="button">retour</button>
   </header>
 
@@ -105,8 +103,10 @@
       <h2>Avis</h2>
     </div>
 
-    <img src="img/Profils/simp1.png" alt="photo de profil autre utilisateur">
-    <h5>@LJBentley</h5>
+    <div class="pu1">
+      <img src="img/Profils/simp1.png" alt="photo de profil autre utilisateur">
+      <h5>@LJBentley</h5>
+    </div>
     <p>
       Excellent roman de SF; halletant et original ! à recommander; offrir, ... enfin de la SF écrit avec un regard
       féminin!
@@ -156,6 +156,8 @@
       tooltip: false,
     });
   </script>
+
+  <script src="scripts/survol-boutons.js"></script>
 </body>
 
 
